--- a/src/ShopBundle/Resources/views/Produits/Users/histAchats.html.twig
+++ b/src/ShopBundle/Resources/views/Produits/Users/histAchats.html.twig
@@ -37,13 +37,26 @@ Author: Kamleshyadav
     <link href="{{ asset('Asset/js/plugin/revolution/css/layers.css" rel="stylesheet" type="text/css')}}">
     <link href="{{ asset('Asset/js/plugin/revolution/css/navigation.css" rel="stylesheet" type="text/css')}}">
     <link rel="stylesheet" href="{{ asset('Asset/css/style.css')}}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="{{ asset('tabassets/css/fresh-bootstrap-table.css') }}" rel="stylesheet" />
+    <link href="{{ asset('tabassets/css/demo.css') }}" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link href="http://fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-table/dist/bootstrap-table.min.js"></script>
+
+    <!--  Just for demo purpose, do not include in your project   -->
+    <script src="{{ asset('tabassets/js/demo/gsdk-switch.js') }}"></script>
+    <script src="{{ asset('tabassets/js/demo/jquery.sharrre.js') }}"></script>
+    <script src="{{ asset('tabassets/js/demo/demo.js') }}"></script>
 </head>
 {% block head %}
 {% endblock %}
 
 <body>
-<!--Loader Start-->
-
 <!--Top bar start-->
 <div class="cy_top_wrapper">
     <div class="cy_top_info">
@@ -75,7 +88,8 @@ Author: Kamleshyadav
                                                 <h4><a href="cart.html">Road Bicycle</a></h4>
                                                 <h5>$2200</h5>
                                             </div>
-                                            <a class="cart_delete"><i class="fa fa-times" aria-hidden="true"></i></a>
+                                            <a class="
+                                            cart_delete"><i class="fa fa-times" aria-hidden="true"></i></a>
                                         </div>
                                     </li>
                                     <li>
@@ -176,11 +190,11 @@ Author: Kamleshyadav
     </div>
 </div>
 <!--Banner section start-->
-<div class="cy_banner_wrapper">
-    <div class="container-fluid">
+<div class="cy_bread_wrapper">
+    <div class="container">
         <div class="row">
-            <div id="rev_slider_1068_1_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="levano4export" data-source="gallery" style="background-color:transparent;padding:0px;">
-
+            <div class="col-lg-12 col-md-12">
+                <h1>Historique Des Commandes</h1>
             </div>
         </div>
     </div>
@@ -199,7 +213,7 @@ Author: Kamleshyadav
                 <div class="cy_menu">
                     <nav>
                         <ul>
-                            <li><a href="index.html" class="active">home</a></li>
+                            <li><a href="index.html">home</a></li>
                             <li><a href="about.html">about</a></li>
                             <li class="dropdown"><a href="javascript:;">event</a>
                                 <ul class="sub-menu">
@@ -207,7 +221,7 @@ Author: Kamleshyadav
                                     <li><a href="event_single.html">event single</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown"><a href="javascript:;">blog</a>
+                            <li class="dropdown"><a href="blog.html">blog</a>
                                 <ul class="sub-menu">
                                     <li><a href="blog.html">blog</a></li>
                                     <li><a href="blog_single.html">blog single</a></li>
@@ -242,26 +256,57 @@ Author: Kamleshyadav
         <i class="fa fa-search"></i>
     </div>
 </div>
-{% block body %}
-{% endblock %}
-<!--About section start-->
+<!-- Cart section start -->
+<div class="cy_cart_wrapper">
+    <div class="container">
+        <div class="row">
+            <div class="fresh-table full-color-orange">
+                <!--
+                  Available colors for the full background: full-color-blue, full-color-azure, full-color-green, full-color-red, full-color-orange
+                  Available colors only for the toolbar: toolbar-color-blue, toolbar-color-azure, toolbar-color-green, toolbar-color-red, toolbar-color-orange
+                -->
+                <div class="toolbar">
+                    <button id="alertBtn" class="btn btn-default">Alert</button>
+                </div>
 
-<!--Team section start-->
+                <table id="fresh-table" class="table">
+                    <thead>
+                    <th data-field="id">ID Commande</th>
+                    <th data-field="name" data-sortable="true">Prix_Total</th>
+                    <th data-field="salary" data-sortable="true">Code Promo</th>
+                    <th data-field="produit" data-sortable="false">Produits</th>
+                    <th data-field="country" data-sortable="true">Date</th>
+                    <th data-field="actions" data-formatter="operateFormatter" data-events="operateEvents">Actions</th>
+                    </thead>
+                    {% for commande in comms %}
+                    <tbody>
+                            <tr>
+                                <td>{{ commande.idCommande }}</td>
+                                <td>{{commande.prixTotal}}</td>
+                                <td>{{commande.codePromo}}</td>
+                                {% for prod in commande.idProd %}
+                                    <th scope="row" class="name">
+                                        <div class="img-fluid">
+                                            <a href="" >
+                                                <br><br><img alt="Image placeholder" class="img-fluid" src="{{ prod.urlImage}}">
 
-<!--Achievements section start-->
-
-<!--Gallery section css start-->
-
-<!--Cycle Tour section start-->
-
-<!--Events Sevtion Start-->
-
-<!--Our sponsors section start-->
-
-<!--upcoming races section Start-->
-
-<!--result section start-->
-
+                                            </a>
+                                            <div class="media-body">
+                                                <span class="mb-0 text-sm">{{ prod.nom }}</span>
+                                            </div>
+                                        </div>
+                                    </th>
+                                {% endfor %}
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        {% endfor %}
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <!--Footer section start-->
 <div class="cy_footer_wrapper cy_section_padding padder_bottom75">
     <div class="container">
@@ -350,31 +395,148 @@ Author: Kamleshyadav
 <!--Go to top start-->
 <div class="cy_go_to">
     <div class="cy_go_top">
-        <img src="images/go_to_top.png" alt="Back to top">
+        <img src="images/go_to_top.png" alt="back to top">
     </div>
 </div>
+</body>
 {% block scripts %}
-<!--scripts start-->
-<script src="{{asset('Asset/js/jquery.js')}}"></script>
-<script src="{{ asset('Asset/js/tether.min.js')}}"></script>
-<script src="{{ asset('Asset/js/bootstrap.min.js')}}"></script>
-<script src="{{ asset('Asset/js/jquery.countTo.js')}}"></script>
-<script src="{{ asset('Asset/js/appear.js')}}"></script>
-<script src="{{ asset('Asset/js/wow.js')}}"></script>
-<script src="{{ asset('Asset/js/plugin/owl/owl.carousel.min.js')}}"></script>
-<script src="{{ asset('Asset/js/plugin/magnific/jquery.magnific-popup.min.js')}}"></script>
-<!--Revolution slider js-->
-<script src="{{ asset('Asset/js/plugin/revolution/js/jquery.themepunch.revolution.min.js')}}"></script>
-<script src="{{ asset('Asset/js/plugin/revolution/js/jquery.themepunch.tools.min.js')}}"></script>
-<script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.navigation.min.js')}}"></script>
-<script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.slideanims.min.js')}}"></script>
-<script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.layeranimation.min.js')}}"></script>
-<script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.parallax.min.js')}}"></script>
-<script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.kenburn.min.js')}}"></script>
-<script src="{{ asset('Asset/js/jquery.nice-select.min.js')}}"></script>
-<script src="{{ asset('Asset/js/custom.js')}}"></script>
+    <script type="text/javascript">
+        var $table = $('#fresh-table')
+        var $alertBtn = $('#alertBtn')
+
+        window.operateEvents = {
+            'click .like': function (e, value, row, index) {
+                alert('You click like icon, row: ' + JSON.stringify(row))
+                console.log(value, row, index)
+            },
+            'click .edit': function (e, value, row, index) {
+                alert('You click edit icon, row: ' + JSON.stringify(row))
+                console.log(value, row, index)
+            },
+            'click .remove': function (e, value, row, index) {
+                $table.bootstrapTable('remove', {
+                    field: 'id',
+                    values: [row.id]
+                })
+            }
+        }
+
+        function operateFormatter(value, row, index) {
+            return [
+                '<a rel="tooltip" title="Like" class="table-action like" href="javascript:void(0)" title="Like">',
+                '<i class="fa fa-heart"></i>',
+                '</a>',
+                '<a rel="tooltip" title="Edit" class="table-action edit" href="javascript:void(0)" title="Edit">',
+                '<i class="fa fa-edit"></i>',
+                '</a>',
+                '<a rel="tooltip" title="Remove" class="table-action remove" href="javascript:void(0)" title="Remove">',
+                '<i class="fa fa-remove"></i>',
+                '</a>'
+            ].join('')
+        }
+
+        $(function () {
+            $table.bootstrapTable({
+                classes: 'table table-hover table-striped',
+                toolbar: '.toolbar',
+
+                search: true,
+                showRefresh: true,
+                showToggle: true,
+                showColumns: true,
+                pagination: true,
+                striped: true,
+                sortable: true,
+                pageSize: 8,
+                pageList: [8, 10, 25, 50, 100],
+
+                formatShowingRows: function (pageFrom, pageTo, totalRows) {
+                    return ''
+                },
+                formatRecordsPerPage: function (pageNumber) {
+                    return pageNumber + ' rows visible'
+                }
+            })
+
+            $alertBtn.click(function () {
+                alert('You pressed on Alert')
+            })
+        })
+
+        $('#sharrreTitle').sharrre({
+            share: {
+                twitter: true,
+                facebook: true
+            },
+            template: '',
+            enableHover: false,
+            enableTracking: true,
+            render: function (api, options) {
+                $("#sharrreTitle").html('Thank you for ' + options.total + ' shares!')
+            },
+            enableTracking: true,
+            url: location.href
+        })
+
+        $('#twitter').sharrre({
+            share: {
+                twitter: true
+            },
+            enableHover: false,
+            enableTracking: true,
+            buttons: { twitter: {via: 'CreativeTim'}},
+            click: function (api, options) {
+                api.simulateClick()
+                api.openPopup('twitter')
+            },
+            template: '<i class="fa fa-twitter"></i> {total}',
+            url: location.href
+        })
+
+        $('#facebook').sharrre({
+            share: {
+                facebook: true
+            },
+            enableHover: false,
+            enableTracking: true,
+            click: function (api, options) {
+                api.simulateClick()
+                api.openPopup('facebook')
+            },
+            template: '<i class="fa fa-facebook-square"></i> {total}',
+            url: location.href
+        })
+    </script>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga')
+
+        ga('create', 'UA-46172202-1', 'auto')
+        ga('send', 'pageview')
+
+    </script>
+    <!--scripts start-->
+    <script src="{{asset('Asset/js/jquery.js')}}"></script>
+    <script src="{{ asset('Asset/js/tether.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/bootstrap.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/jquery.countTo.js')}}"></script>
+    <script src="{{ asset('Asset/js/appear.js')}}"></script>
+    <script src="{{ asset('Asset/js/wow.js')}}"></script>
+    <script src="{{ asset('Asset/js/plugin/owl/owl.carousel.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/plugin/magnific/jquery.magnific-popup.min.js')}}"></script>
+    <!--Revolution slider js-->
+    <script src="{{ asset('Asset/js/plugin/revolution/js/jquery.themepunch.revolution.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/plugin/revolution/js/jquery.themepunch.tools.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.navigation.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.slideanims.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.layeranimation.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.parallax.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/plugin/revolution/js/revolution.extension.kenburn.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/jquery.nice-select.min.js')}}"></script>
+    <script src="{{ asset('Asset/js/custom.js')}}"></script>
 {% endblock %}
 
-
-</body>
 </html>
