--- a/src/ShopBundle/Resources/views/Produits/Front/list.html.twig
+++ b/src/ShopBundle/Resources/views/Produits/Front/list.html.twig
@@ -13,7 +13,7 @@
             <div class="col-lg-6 col-md-6 item">
                 <div class="cy_store_box">
                     <div class="cy_store_img">
-                        <a href="shop_single.html"><img src="{{produit.urlImage}}" alt="store" class="img-fluid"></a>
+                        <a href="shop_single.html"><img src="{{ asset('images/') }}{{produit.urlImage}}" alt="store" class="img-fluid"></a>
                         <div class="cy_store_img_overlay">
                             <p>Sale</p>
                         </div>
