--- a/app/Resources/views/Front/cart.html.twig
+++ b/app/Resources/views/Front/cart.html.twig
@@ -166,7 +166,7 @@ Author: Kamleshyadav
                         <tbody>
                         <tr>
 
-                            <td class="product-thumbnail"><a href="#"><img src="{{ produit.product.urlImage }}" alt="cart thumbnail" class="img-fluid"></a></td>
+                            <td class="product-thumbnail"><a href="#"><img src="{{ asset('images/') }}{{produit.product.urlImage}}" alt="cart thumbnail" class="img-fluid"></a></td>
                             <td class="product-name">{{ produit.product.nom }}</td>
                             <td class="product-price">{{ produit.product.prixProd }}</td>
                             <td class="product-name">{{ produit.quantity }}</td>
